css: fix header's spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -697,7 +697,7 @@ header .contact-links {
   flex-direction: row;
   justify-content: center;
   align-items: flex-end;
-  margin-top: -3px;
+  margin-top: 4px;
   text-align: center;
 }
 #logo .page_name svg {
